zetasql/compliance/testdata/analytic_ntile.test
[load_proto_files=zetasql/testdata/test_schema.proto]
[load_enum_names=zetasql_test__.TestEnum]
[prepare_database]
CREATE TABLE TestTable AS
SELECT cast(1 as int64) as row_id,
       cast(null as bool) as bool_val,
       cast(null as int64) as int64_val,
       cast(null as int32) as int32_val,
       cast(null as string) as str_val UNION ALL
  SELECT 2,  true,  null, null,  null  UNION ALL
  SELECT 3,  false, 1,    1,     "A"   UNION ALL
  SELECT 4,  true,  1,    2,     "A"   UNION ALL
  SELECT 5,  false, 1,    3,     "aA"   UNION ALL
  SELECT 6,  true,  2,    2,     "Aa"   UNION ALL
  SELECT 7,  false, 1,    1,     'a'   UNION ALL
  SELECT 8,  true,  2,    1,     "a"   UNION ALL
  SELECT 9,  false, 2,    3,     "b"   UNION ALL
  SELECT 10, true,  2,    1,     "B"
--
ARRAY<STRUCT<row_id INT64,
             bool_val BOOL,
             int64_val INT64,
             int32_val INT32,
             str_val STRING>>
[
  {1, NULL, NULL, NULL, NULL},
  {2, true, NULL, NULL, NULL},
  {3, false, 1, 1, "A"},
  {4, true, 1, 2, "A"},
  {5, false, 1, 3, "aA"},
  {6, true, 2, 2, "Aa"},
  {7, false, 1, 1, "a"},
  {8, true, 2, 1, "a"},
  {9, false, 2, 3, "b"},
  {10, true, 2, 1, "B"}
]
==

[prepare_database]
CREATE TABLE TableDateTimeBytes AS
SELECT cast(1 as int64) as row_id,
       cast(null as date) as date_val,
       cast(null as timestamp) as timestamp_val,
       cast(null as bytes) as bytes_val UNION ALL
SELECT 2,
       cast('2014-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("1" as bytes) UNION ALL
SELECT 3,
       cast('2014-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("2" as bytes) UNION ALL
SELECT 4,
       cast('2015-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("1" as bytes) UNION ALL
SELECT 5,
       cast('2015-01-01' as date),
       TIMESTAMP '2013-01-01 00:00:01.011011 UTC',
       cast("2" as bytes) UNION ALL
SELECT 6,
       cast('2014-01-01' as date),
       TIMESTAMP '2015-01-01 00:00:01.011011 UTC',
       cast("5" as bytes)
--
ARRAY<STRUCT<
        row_id INT64,
        date_val DATE,
        timestamp_val TIMESTAMP,
        bytes_val BYTES
      >>
[{1, NULL, NULL, NULL},
 {
   2,
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   b"1"
 },
 {
   3,
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   b"2"
 },
 {
   4,
   2015-01-01,
   2014-01-01 00:00:01.011011+00,
   b"1"
 },
 {
   5,
   2015-01-01,
   2013-01-01 00:00:01.011011+00,
   b"2"
 },
 {
   6,
   2014-01-01,
   2015-01-01 00:00:01.011011+00,
   b"5"
 }]
==

[default required_features=ANALYTIC_FUNCTIONS]
[name=ntile_one_bucket]
SELECT row_id, NTILE(1) OVER (ORDER BY row_id)
FROM TestTable
--
ARRAY<STRUCT<row_id INT64, INT64>>[
  {1, 1},
  {2, 1},
  {3, 1},
  {4, 1},
  {5, 1},
  {6, 1},
  {7, 1},
  {8, 1},
  {9, 1},
  {10, 1}
]
==

[name=ntile_two_buckets]
SELECT row_id, NTILE(2) OVER (ORDER BY row_id)
FROM TestTable
--
ARRAY<STRUCT<row_id INT64, INT64>>[
  {1, 1},
  {2, 1},
  {3, 1},
  {4, 1},
  {5, 1},
  {6, 2},
  {7, 2},
  {8, 2},
  {9, 2},
  {10, 2}
]
==

[name=ntile_three_buckets]
SELECT row_id, NTILE(3) OVER (ORDER BY row_id)
FROM TestTable
--
ARRAY<STRUCT<row_id INT64, INT64>>[
  {1, 1},
  {2, 1},
  {3, 1},
  {4, 1},
  {5, 2},
  {6, 2},
  {7, 2},
  {8, 3},
  {9, 3},
  {10, 3}
]
==

[name=ntile_nine_buckets]
SELECT row_id, NTILE(9) OVER (ORDER BY row_id)
FROM TestTable
--
ARRAY<STRUCT<row_id INT64, INT64>>[
  {1, 1},
  {2, 1},
  {3, 2},
  {4, 3},
  {5, 4},
  {6, 5},
  {7, 6},
  {8, 7},
  {9, 8},
  {10, 9}
]
==

[name=ntile_ten_buckets]
SELECT row_id, NTILE(10) OVER (ORDER BY row_id)
FROM TestTable
--
ARRAY<STRUCT<row_id INT64, INT64>>[
  {1, 1},
  {2, 2},
  {3, 3},
  {4, 4},
  {5, 5},
  {6, 6},
  {7, 7},
  {8, 8},
  {9, 9},
  {10, 10}
]
==

[name=ntile_eleven_buckets]
SELECT row_id, NTILE(11) OVER (ORDER BY row_id)
FROM TestTable
--
ARRAY<STRUCT<row_id INT64, INT64>>[
  {1, 1},
  {2, 2},
  {3, 3},
  {4, 4},
  {5, 5},
  {6, 6},
  {7, 7},
  {8, 8},
  {9, 9},
  {10, 10}
]
==

[name=ntile_large_bucket_count]
SELECT row_id, NTILE(9223372036854775807) OVER (ORDER BY row_id)
FROM TestTable
--
ARRAY<STRUCT<row_id INT64, INT64>>[
  {1, 1},
  {2, 2},
  {3, 3},
  {4, 4},
  {5, 5},
  {6, 6},
  {7, 7},
  {8, 8},
  {9, 9},
  {10, 10}
]
==

[name=ntile_null_bucket_count]
[parameters=cast(null as int64) as buckets]
SELECT row_id, NTILE(@buckets) OVER (ORDER BY row_id)
FROM TestTable
--
ERROR: generic::out_of_range: The N value (number of buckets) for the NTILE function must not be NULL
==

[name=ntile_zero_bucket_count]
[parameters=0 as buckets]
SELECT row_id, NTILE(@buckets) OVER (ORDER BY row_id)
FROM TestTable
--
ERROR: generic::out_of_range: The N value (number of buckets) for the NTILE function must be positive
==

[name=ntile_negative_bucket_count]
[parameters=-1 as buckets]
SELECT row_id, NTILE(@buckets) OVER (ORDER BY row_id)
FROM TestTable
--
ERROR: generic::out_of_range: The N value (number of buckets) for the NTILE function must be positive
==

# The following test queries repeat those for RANK, but with
# the function name replaced with NTILE.

[name=ntile_int64]
SELECT bool_val, int64_val,
       NTILE(3) OVER (PARTITION BY bool_val ORDER BY int64_val)
FROM TestTable
--
ARRAY<STRUCT<bool_val BOOL, int64_val INT64, INT64>>[
  {NULL, NULL, 1},
  {false, 1, 1},
  {false, 1, 1},
  {false, 1, 2},
  {false, 2, 3},
  {true, NULL, 1},
  {true, 1, 1},
  {true, 2, 2},
  {true, 2, 2},
  {true, 2, 3}
]
==

[name=ntile_bool]
SELECT bool_val, NTILE(2) OVER (ORDER BY bool_val)
FROM TestTable
--
ARRAY<STRUCT<bool_val BOOL, INT64>>[
  {NULL, 1},
  {false, 1},
  {false, 1},
  {false, 1},
  {false, 1},
  {true, 2},
  {true, 2},
  {true, 2},
  {true, 2},
  {true, 2}
]
==

[name=ntile_str_int64]
SELECT str_val, int64_val,
       NTILE(8) OVER (ORDER BY str_val, int64_val DESC)
FROM TestTable
--
ARRAY<STRUCT<str_val STRING, int64_val INT64, INT64>>[
  {NULL, NULL, 1},
  {NULL, NULL, 1},
  {"A", 1, 2},
  {"A", 1, 2},
  {"Aa", 2, 3},
  {"B", 2, 4},
  {"a", 2, 5},
  {"a", 1, 6},
  {"aA", 1, 7},
  {"b", 2, 8}
]
==

[test_features1=V_1_1_ORDER_BY_COLLATE]
[name=ntile_collate]
SELECT str_val, int64_val,
       NTILE(9) OVER (ORDER BY str_val COLLATE "en_US", int64_val DESC)
FROM TestTable
ORDER BY str_val COLLATE "en_US"
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_1_ORDER_BY_COLLATE
ARRAY<STRUCT<str_val STRING, int64_val INT64, INT64>>[
  {NULL, NULL, 1},
  {NULL, NULL, 1},
  {"a", 1, 3},
  {"a", 2, 2},
  {"A", 1, 5},
  {"A", 1, 4},
  {"aA", 1, 6},
  {"Aa", 2, 7},
  {"b", 2, 8},
  {"B", 2, 9}
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: COLLATE is not supported [at 2:40]
       NTILE(9) OVER (ORDER BY str_val COLLATE "en_US", int64_val DESC)
                                       ^
==

[name=ntile_int32_uint64]
SELECT int32_val, cast(int64_val as uint64),
       NTILE(8) OVER (ORDER BY int32_val, cast(int64_val as uint64) ASC)
FROM TestTable
--
ARRAY<STRUCT<int32_val INT32, UINT64, INT64>>[
  {NULL, NULL, 1},
  {NULL, NULL, 1},
  {1, 1, 2},
  {1, 1, 2},
  {1, 2, 3},
  {1, 2, 4},
  {2, 1, 5},
  {2, 2, 6},
  {3, 1, 7},
  {3, 2, 8}
]
==

[name=ntile_uint32_int64]
SELECT cast(int32_val as uint32), int64_val,
       NTILE(7) OVER (ORDER BY cast(int32_val as uint32), int64_val)
FROM TestTable
--
ARRAY<STRUCT<UINT32, int64_val INT64, INT64>>[
  {NULL, NULL, 1},
  {NULL, NULL, 1},
  {1, 1, 2},
  {1, 1, 2},
  {1, 2, 3},
  {1, 2, 3},
  {2, 1, 4},
  {2, 2, 5},
  {3, 1, 6},
  {3, 2, 7}
]
==

[name=ntile_enum]
SELECT enum_val, NTILE(6) OVER (ORDER BY enum_val DESC)
FROM (SELECT CAST(0 AS `zetasql_test__.TestEnum`) enum_val UNION ALL
      SELECT CAST(1 AS `zetasql_test__.TestEnum`)          UNION ALL
      SELECT CAST(1 AS `zetasql_test__.TestEnum`)          UNION ALL
      SELECT CAST(2 AS `zetasql_test__.TestEnum`)          UNION ALL
      SELECT CAST(2 AS `zetasql_test__.TestEnum`)          UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`)       UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`))
--
ARRAY<STRUCT<
        enum_val ENUM<zetasql_test__.TestEnum>,
        INT64
      >>
[{TESTENUM2, 1},
 {TESTENUM2, 1},
 {TESTENUM1, 2},
 {TESTENUM1, 3},
 {TESTENUM0, 4},
 {NULL, 5},
 {NULL, 6}]
==

[name=ntile_double]
SELECT double_val, NTILE(5) OVER (ORDER BY double_val)
FROM (SELECT CAST(0 AS DOUBLE) double_val UNION ALL
      SELECT CAST(1 AS DOUBLE)            UNION ALL
      SELECT CAST(null AS DOUBLE)         UNION ALL
      SELECT CAST(null AS DOUBLE)         UNION ALL
      SELECT CAST("NaN" AS DOUBLE)        UNION ALL
      SELECT CAST("inf" AS DOUBLE)        UNION ALL
      SELECT CAST("inf" AS DOUBLE)        UNION ALL
      SELECT CAST("NaN" AS DOUBLE)        UNION ALL
      SELECT CAST("-inf" AS DOUBLE)       UNION ALL
      SELECT CAST("-inf" AS DOUBLE))
--
ARRAY<STRUCT<double_val DOUBLE, INT64>>[
  {NULL, 1},
  {NULL, 1},
  {nan, 2},
  {nan, 2},
  {-inf, 3},
  {-inf, 3},
  {0, 4},
  {1, 4},
  {inf, 5},
  {inf, 5}
]
==

[name=ntile_float]
SELECT float_val, NTILE(3) OVER (ORDER BY float_val)
FROM (SELECT CAST(0 AS FLOAT) float_val UNION ALL
      SELECT CAST(1 AS FLOAT)           UNION ALL
      SELECT CAST(null AS FLOAT)        UNION ALL
      SELECT CAST(null AS FLOAT)        UNION ALL
      SELECT CAST("NaN" AS FLOAT)       UNION ALL
      SELECT CAST("inf" AS FLOAT)       UNION ALL
      SELECT CAST("inf" AS FLOAT)       UNION ALL
      SELECT CAST("NaN" AS FLOAT)       UNION ALL
      SELECT CAST("-inf" AS FLOAT)      UNION ALL
      SELECT CAST("-inf" AS FLOAT))
--
ARRAY<STRUCT<float_val FLOAT, INT64>>[
  {NULL, 1},
  {NULL, 1},
  {nan, 1},
  {nan, 1},
  {-inf, 2},
  {-inf, 2},
  {0, 2},
  {1, 3},
  {inf, 3},
  {inf, 3}
]
==

[name=ntile_date_timestamp]
SELECT date_val, timestamp_val,
       NTILE(4) OVER (ORDER BY date_val, timestamp_val)
FROM TableDateTimeBytes
--
ARRAY<STRUCT<
        date_val DATE,
        timestamp_val TIMESTAMP,
        INT64
      >>
[{NULL, NULL, 1},
 {
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   1
 },
 {
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   2
 },
 {
   2014-01-01,
   2015-01-01 00:00:01.011011+00,
   2
 },
 {
   2015-01-01,
   2013-01-01 00:00:01.011011+00,
   3
 },
 {
   2015-01-01,
   2014-01-01 00:00:01.011011+00,
   4
 }]
==

[name=ntile_bytes]
SELECT bytes_val,
       NTILE(2) OVER (ORDER BY bytes_val)
FROM TableDateTimeBytes
--
ARRAY<STRUCT<bytes_val BYTES, INT64>>[
  {NULL, 1},
  {b"1", 1},
  {b"1", 1},
  {b"2", 2},
  {b"2", 2},
  {b"5", 2}
]
==

[required_features=ANALYTIC_FUNCTIONS,NUMERIC_TYPE]
[name=ntile__numeric]
[parameters="99999999999999999999999999999.999999999" as max_val,
            "-99999999999999999999999999999.999999999" as min_val]
SELECT NTILE(2) OVER(ORDER BY numeric_val)
FROM (SELECT CAST(NULL as NUMERIC) numeric_val UNION ALL
      SELECT 0                                 UNION ALL
      SELECT 3.5                               UNION ALL
      SELECT -1.230000001                      UNION ALL
      SELECT CAST(@max_val AS NUMERIC)         UNION ALL
      SELECT CAST(@min_val AS NUMERIC))
--
ARRAY<STRUCT<INT64>>[{1}, {1}, {1}, {2}, {2}, {2}]
==

[name=ntile_no_orderby]
SELECT NTILE(3) OVER ()
FROM TestTable
--
ERROR: generic::invalid_argument: Window ORDER BY is required for analytic function ntile [at 1:22]
SELECT NTILE(3) OVER ()
                     ^
==

[name=ntile_window]
SELECT row_id, NTILE(3) OVER (ORDER BY bool_val ROWS 2 PRECEDING)
FROM TestTable
--
ERROR: generic::invalid_argument: Window framing clause is not allowed for analytic function ntile [at 1:49]
SELECT row_id, NTILE(3) OVER (ORDER BY bool_val ROWS 2 PRECEDING)
                                                ^
